Add API response annotations
