# backend/src/main/java/com/project/expensemanager/controller/RecurringExpenseController.java
@@ -11,6 +11,8 @@ import com.project.expensemanager.service.CategoryService;
 import com.project.expensemanager.service.RecurringExpenseService;
 import com.project.expensemanager.service.UserService;
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
@@ -43,6 +45,11 @@ public class RecurringExpenseController {
             summary = "Create a recurring expense",
             description = "Creates a new recurring expense for the authenticated user."
     )
+    @ApiResponses({
+            @ApiResponse(responseCode = "201", description = "Recurring expense created successfully"),
+            @ApiResponse(responseCode = "400", description = "Invalid recurring expense data"),
+            @ApiResponse(responseCode = "404", description = "Category not found")
+    })
     @PostMapping
     public ResponseEntity<RecurringExpenseResponse> createRecurringExpense(
             Authentication authentication,
@@ -63,6 +70,11 @@ public class RecurringExpenseController {
             summary = "Update a recurring expense",
             description = "Updates the specified recurring expense belonging to the authenticated user with the provided data."
     )
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Recurring expense updated successfully"),
+            @ApiResponse(responseCode = "400", description = "Invalid recurring expense data"),
+            @ApiResponse(responseCode = "404", description = "Recurring expense or category not found")
+    })
     @PutMapping("/{recurringExpenseId}")
     public ResponseEntity<RecurringExpenseResponse> updateRecurringExpense(
             Authentication authentication,
@@ -84,6 +96,9 @@ public class RecurringExpenseController {
             summary = "Get all recurring expenses",
             description = "Returns all recurring expenses belonging to the authenticated user."
     )
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Recurring expense retrieved successfully")
+    })
     @GetMapping
     public ResponseEntity<List<RecurringExpenseResponse>> getAllRecurringExpenses(
             Authentication authentication
@@ -101,6 +116,10 @@ public class RecurringExpenseController {
             summary = "Get recurring expense by ID",
             description = "Returns the specified recurring expense belonging to the authenticated user."
     )
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Recurring expense retrieved successfully"),
+            @ApiResponse(responseCode = "404", description = "Recurring expense not found"),
+    })
     @GetMapping("/{recurringExpenseId}")
     public ResponseEntity<RecurringExpenseResponse> getExpenseById(
             Authentication authentication,
@@ -119,6 +138,10 @@ public class RecurringExpenseController {
             summary = "Search recurring expenses",
             description = "Returns the authenticated user's recurring expenses that match the specified search criteria."
     )
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Recurring expenses retrieved successfully"),
+            @ApiResponse(responseCode = "404", description = "Category not found"),
+    })
     @GetMapping("/search")
     public ResponseEntity<List<RecurringExpenseResponse>> searchRecurringExpenses (
             Authentication authentication,
@@ -144,6 +167,10 @@ public class RecurringExpenseController {
             summary = "Filter recurring expenses",
             description = "Returns the authenticated user's recurring expenses that match the specified filter criteria."
     )
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Recurring expense retrieved successfully"),
+            @ApiResponse(responseCode = "400", description = "Invalid filtering criteria"),
+    })
     @GetMapping("/filter")
     public ResponseEntity<List<RecurringExpenseResponse>> filterRecurringExpenses (
             Authentication authentication,
@@ -164,6 +191,10 @@ public class RecurringExpenseController {
             summary = "Delete a recurring expense",
             description = "Deletes the specified recurring expense belonging to the authenticated user."
     )
+    @ApiResponses({
+            @ApiResponse(responseCode = "204", description = "Recurring expense deleted successfully"),
+            @ApiResponse(responseCode = "404", description = "Recurring expense not found"),
+    })
     @DeleteMapping("/{recurringExpenseId}")
     public ResponseEntity<Void> deleteRecurringExpense(
             Authentication authentication,
